--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,9 +186,6 @@
     border: none;
     outline: none;
 }
-.btn-sign{
-
-}
 
 .prev-btn{
     position: absolute;
@@ -260,6 +257,13 @@ right: -30%;
     border-radius: 10px 10px 0px 0px;
     background: linear-gradient(97deg, #FD9B2B 13.58%, #F14F09 86.99%);
 }
+.min-vh-135{
+    min-height: 135vh;
+}
+.su:hover{
+    background: linear-gradient(97deg,  #F14F09 13.58%, #FD9B2B 86.99%);
+    transform: scale(0.9);
+}
 
 .slide-card {
     border-radius: 8px;
@@ -271,6 +275,10 @@ right: -30%;
     border-radius: 10px;
     background: #FFF;
     box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.06);
+}
+.prev-btn:hover{
+    background: white !important;
+    color: orange !important;
 }
 
 .card2 {
@@ -324,10 +332,31 @@ border-radius: 30.5px;
     background-size: cover;
     background-position: center;
 }
+.font-list{
+    position: relative;
+    transition: all 300ms linear;
+}
 
-.ll:hover {
-    color: #F14F09 !important;
-    transition: all 300ms linear !important;
+.font-list::after{
+    content: '';
+    position: absolute;
+    height: 3px;
+    width: 0;
+    background: linear-gradient(97deg, #FD9B2B 13.58%, #F14F09 86.99%);
+    top: 25px;
+    left: 0;
+    transition: all 300ms linear;
+
+}
+
+.font-list:hover::after {
+    width: 100%;
+}
+.font-list:hover{
+    background: linear-gradient(97deg, #FD9B2B 13.58%, #F14F09 86.99%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 /* Navbar */
